// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionImage renders 1`] = `
<DocumentFragment>
  <img
    class="sc-htpNat pwdlU"
  />
</DocumentFragment>
`;

exports[`SectionNumber renders 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH kTolxG"
  />
</DocumentFragment>
`;

exports[`SectionText renders 1`] = `
<DocumentFragment>
  <p
    class="sc-bxivhb hFElTN"
  />
</DocumentFragment>
`;
